kubernetes/5-nginx-tls/1.deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: 9-example
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: 9-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: aputra/myapp-195:v2
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: 9-example
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp
